--- a/parachains/runtimes/assets/statemine/Cargo.toml
+++ b/parachains/runtimes/assets/statemine/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "statemine-runtime"
 version = "2.0.0"
-authors = ["Ramsey Ajram, Parity Technologies <admin@parity.io>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2021"
 description = "Kusama variant of Statemint parachain runtime"
 
