--- a/polkadot-parachain/Cargo.toml
+++ b/polkadot-parachain/Cargo.toml
@@ -90,7 +90,7 @@ cumulus-primitives-parachain-inherent = { path = "../primitives/parachain-inhere
 cumulus-relay-chain-interface = { path = "../client/relay-chain-interface" }
 
 # Supersig
-pallet-supersig-rpc = { git = "https://github.com/decentration/pallet_supersig.git", branch = "polkadot-v0.9.37-fix-unbounded", default-features = false}
+pallet-supersig-rpc = { git = "https://github.com/decentration/pallet_supersig.git", branch = "polkadot-v0.9.37", default-features = false}
 
 
 [build-dependencies]
